--- a/entry-2.html
+++ b/entry-2.html
@@ -27,7 +27,7 @@
         <img src="entry/plain-marble.png" class="button" style="top: 350px; left: 1100px; width: 250px; height: auto;"
             onclick="popup.showText({texts: texts[1], name: 'plain-marble', tintBackground: true, takeOverScreen: false, style: 'top: 510px; left: 1076px; width: 250px; height: auto;'})">
         <img src="entry/button-id-chart.png" class="button" style="top: 930px; left: 1400px; width: 230px; height: auto;"
-            onclick="popup.showImage({images: 'entry/ID-paper.png', name: 'id-chart', fullscreen: false, tintBackground: true, takeOverScreen: true})">
+            onclick="popup.showImage({images: 'entry/id-paper.png', name: 'id-chart', fullscreen: false, tintBackground: true, takeOverScreen: true})">
 
         <button class="button button-back" onclick="fadeToScene('entry-1.html')"></button>
         <button class="button button-next" onclick="fadeToScene('entry-3.html')"></button>
